<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dimen_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dimen_64"
            android:layout_height="@dimen/dimen_64"
            android:scaleType="centerInside"
            android:src="@drawable/ic_github"/>

        <TextView
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/github_com_v3"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/dimen_160"
            android:layout_height="@dimen/dimen_160"
            android:scaleType="centerInside"
            android:src="@drawable/qr_github"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20"
            android:gravity="center"
            android:text="@string/source_link"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_copyright"
            android:padding="@dimen/dimen_5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_5"
            android:text="@string/make_it_better"/>

    </LinearLayout>

</RelativeLayout>